[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/elements/list/ListItem.gd" type="Script" id=1]
[ext_resource path="res://res/icons/icon_FoldArrow.svg" type="Texture" id=2]
[ext_resource path="res://res/icons/icon_X.svg" type="Texture" id=3]
[ext_resource path="res://src/custom_ui/CustomTextureButton.gd" type="Script" id=4]
[ext_resource path="res://res/icons/icon_Plus.svg" type="Texture" id=5]

[node name="ListItem" type="VBoxContainer"]
margin_right = 400.0
margin_bottom = 71.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="DeleteButton" type="TextureButton" parent="HBoxContainer"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
margin_right = 40.0
margin_bottom = 63.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 4 )
c_color = "Red"

[node name="DropdownButton" type="TextureButton" parent="HBoxContainer"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
margin_left = 48.0
margin_right = 111.0
margin_bottom = 63.0
rect_min_size = Vector2( 63, 63 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 4 )
toggle = false
c_color = "Green"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 119.0
margin_right = 400.0
margin_bottom = 63.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/HBoxContainer2"]
margin_right = 225.0
margin_bottom = 63.0
size_flags_horizontal = 3
text = "New list item"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer2"]
visible = false
margin_left = 186.0
margin_top = -69.0
margin_right = 310.0
margin_bottom = -26.0
size_flags_horizontal = 3
text = "New list item"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/HBoxContainer2"]
margin_left = 233.0
margin_right = 281.0
margin_bottom = 63.0

[node name="Panel" type="Control" parent="."]
visible = false
margin_top = 71.0
margin_right = 400.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
margin_right = 400.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IVBox" type="HBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
margin_right = 400.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 400.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionEdit" type="TextEdit" parent="Panel/VBoxContainer/MarginContainer"]
margin_right = 400.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer"]
visible = false
margin_right = 400.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddButton" type="TextureButton" parent="Panel"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 4 )
toggle = false
c_color = "Green"

[connection signal="button_down" from="HBoxContainer/DeleteButton" to="HBoxContainer/DeleteButton" method="_on_CustomTextureButton_button_down"]
[connection signal="button_up" from="HBoxContainer/DeleteButton" to="HBoxContainer/DeleteButton" method="_on_CustomTextureButton_button_up"]
[connection signal="mouse_entered" from="HBoxContainer/DeleteButton" to="HBoxContainer/DeleteButton" method="_on_CustomTextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/DeleteButton" to="HBoxContainer/DeleteButton" method="_on_CustomTextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="button_down" from="HBoxContainer/DropdownButton" to="HBoxContainer/DropdownButton" method="_on_CustomTextureButton_button_down"]
[connection signal="button_up" from="HBoxContainer/DropdownButton" to="HBoxContainer/DropdownButton" method="_on_CustomTextureButton_button_up"]
[connection signal="mouse_entered" from="HBoxContainer/DropdownButton" to="HBoxContainer/DropdownButton" method="_on_CustomTextureButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/DropdownButton" to="HBoxContainer/DropdownButton" method="_on_CustomTextureButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/DropdownButton" to="." method="_on_DropdownButton_pressed"]
[connection signal="text_changed" from="HBoxContainer/HBoxContainer2/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/MarginContainer/DescriptionEdit" to="." method="_on_DescriptionEdit_text_changed"]
[connection signal="button_down" from="Panel/AddButton" to="Panel/AddButton" method="_on_CustomTextureButton_button_down"]
[connection signal="button_up" from="Panel/AddButton" to="Panel/AddButton" method="_on_CustomTextureButton_button_up"]
[connection signal="mouse_entered" from="Panel/AddButton" to="Panel/AddButton" method="_on_CustomTextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Panel/AddButton" to="Panel/AddButton" method="_on_CustomTextureButton_mouse_exited"]
[connection signal="pressed" from="Panel/AddButton" to="." method="_on_AddButton_pressed"]
